# webrtc-svc-master-thesis

./: .gitignore  Makefile  README.md  livekit-config.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
analysis/: plot-bwe.py  summarize_run.py
client/: livekit-url-handler-pub-sub.mjs  livekit-url-handler.mjs  local-demo-script.js
scenarios/: local-livekit-basic.yaml  multi-client-throttled.yaml  multi-client-upload-throttled.yaml  one-publisher-two-subscribers.yaml
