[project]
name = "webrtc-svc-master-thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Dariusz Piwowarski", email = "d.piwowarski.mail@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "plotly (>=6.7.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
package-mode = false
